// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem matches the snapshot - Complete 1`] = `
<li
  className="complete"
>
  Hello
</li>
`;

exports[`TodoItem matches the snapshot - not complete 1`] = `
<li
  className=""
>
  Hello
</li>
`;
